<hr>

<h3>News</h3>

<ul style="line-height:1.4em">
  <font size="2">
  <li>
	<font color=red>*new*</font>
	[05/2025]
	Our team achieved <b>2nd place</b> in the AVERITEC Shared Task hosted by <a href="https://2025.aclweb.org/">ACL 2025</a> Workshop <a href="https://fever.ai/task.html">FEVER</a>.
  </li>
  <li>
	<font color=red>*new*</font>
	[05/2025]
	<b>Three papers</b> (Active Learning, GUI Agent (findings), IR (findings)) are accepted to <a href="https://2025.aclweb.org/">ACL 2025</a>.
  </li>
  <li>
	<font color=red>*new*</font>
	[05/2025]
	<b>Two papers</b> (Image Captioning, LLM long context) are accepted to <a href="https://icml.cc/">ICML 2025</a>.
  </li>
  <li>
	<font color=red>*new*</font>
	[01/2025]
	<b>Three papers</b> (QA, Inductive Reasoning, LVLM) are accepted to <a href="https://2025.naacl.org/">NAACL 2025</a>.
  </li>
  <li>
	[01/2025]
	<b>Two papers</b> (Text to ReLighting (main) and Domain specific QA (workshop) ) are accepted to <a href="https://2024.emnlp.org/">AAAI 2025</a>.
  </li>
  <li>
    [12/2024]    	
    I gave a talk at <a href="https://en.snu.ac.kr/index.html">SNU</a>, "Capability of Vision and Language Model for "<b>AI for Social Good</b>"
  </li>
  <li>
    [09/2024]    	
    I gave a talk at <a href="http://neweng.cau.ac.kr">CAU</a>, "Vision and Language Representation with LLM for Multimodal Understanding"	
  </li>
  <li>
	[09/2024]
	<b>Three papers</b> (Summarization and Factual Inconsistency Detection, Document QA) are accepted to <a href="https://2024.emnlp.org/">EMNLP 2024</a>.
  </li>
  <li>
	[08/2024]
	Our team achieved <b>2nd place</b> (<b>1st place among open source</b>) in the AVERITEC Shared Task hosted by <a href="https://2024.emnlp.org/">EMNLP 2024</a> Workshop <a href="https://fever.ai/task.html">FEVER</a>.
  </li>
  <li>
	[07/2024]
	One paper (Video Localization) is accepted to <a href="https://cikm2024.org/">CIKM 2024</a>.
  </li>
  <li>
	[06/2024]