@@ -3,12 +3,13 @@
 
 <h3>Academic Activities</h3>
 <ul style="line-height:1.4em">
-  <li>
+  <li>	  
 	  <strong><font color=darkblue>Service: </font></strong> <br>
-	  <strong>Program Committee</strong>, NAACL (since 2019), ACL (since 2020), EMNLP (since 2019), AACL (since 2020), EACL (since 2021), COLING (since 2022), LREC (since 2023), ARR (since 2022) <br>
-    <strong>Program Committee</strong>, AAAI (since 2020), WWW (since 2021), INTERSPEECH (2019), ICLR (since 2023) <br>
-    <strong>Journal Reviewer</strong>, Information Processing and Management, 2020 <br>
-    <strong>Journal Reviewer</strong>, IEEE Signal Processing Letters, 2020 <br>
+      <strong>Area Chair</strong>: EMNLP Industry Track (2025-) <br>
+	  <strong>Program Committee</strong>:  NAACL (since 2019), ACL (since 2020), EMNLP (since 2019), AACL (since 2020), EACL (since 2021), COLING (since 2022), LREC (since 2023), ARR (since 2022) <br>
+    <strong>Program Committee</strong>: AAAI (since 2020), WWW (since 2021), INTERSPEECH (2019), ICLR (since 2023) <br>
+    <strong>Journal Reviewer</strong>: Information Processing and Management, 2020 <br>
+    <strong>Journal Reviewer</strong>: IEEE Signal Processing Letters, 2020 <br>
     <br>
   </li>
   
