@@ -1,9 +1,14 @@
 ﻿year,type,title,authors,conference,conference_url,comment,meta_1,meta_1-url,meta_2,meta_2-url,meta_3,meta_3-url,meta_4,meta_4-url
-2025,conference,From Selection to Generation: A Survey of LLM-based Active Learning,"Yu Xia, Subhojyoti Mukherjee, Zhouhang Xie, Junda Wu, Xintong Li, Ryan Aponte, Hanjia Lyu, Joe Barrow, Hongjie Chen, Franck Dernoncourt, Branislav Kveton, Tong Yu, Ruiyi Zhang, Jiuxiang Gu, Nesreen K. Ahmed, Yu Wang, Xiang Chen, Hanieh Deilamsalehy, Sungchul Kim, Zhengmian Hu, Yue Zhao, Nedim Lipka, Seunghyun Yoon, Ting-Hao Kenneth Huang, Zichao Wang, Puneet Mathur, Soumyabrata Pal, Koyel Mukherjee, Zhehao Zhang, Namyong Park, Thien Huu Nguyen, Jiebo Luo, Ryan A. Rossi, Julian McAuley",ACL 2025,https://2025.aclweb.org/,0,pdf,https://arxiv.org/pdf/2502.11767,0,0,0,0,0,0
-2025,conference,Hypothetical Documents or Knowledge Leakage? Rethinking LLM-based Query Expansion,"Yejun Yoon, Jaeyoon Jung, Seunghyun Yoon, Kunwoo Park",ACL 2025 Findings,https://2025.aclweb.org/,0,pdf,https://arxiv.org/pdf/2504.14175,0,0,0,0,0,0
-2025,conference,"Click, Type, Repeat: A Comprehensive Survey on GUI Agents","Dang Nguyen, Jian Chen, Yu Wang, Gang Wu, Namyong Park, Zhengmian Hu, Hanjia Lyu, Junda Wu, Ryan Aponte, Yu Xia, Xintong Li, Jing Shi, Hongjie Chen, Viet Dac Lai, Zhouhang Xie, Sungchul Kim, Ruiyi Zhang, Tong Yu, Mehrab Tanjim, Nesreen K. Ahmed, Puneet Mathur, Seunghyun Yoon, Lina Yao, Branislav Kveton, Jihyung Kil, Thien Huu Nguyen, Trung Bui, Tianyi Zhou, Ryan A. Rossi, Franck Dernoncourt",ACL 2025 Findings,https://2025.aclweb.org/,0,pdf,https://arxiv.org/pdf/2412.13501,0,0,0,0,0,0
-2025,conference,Toward Robust Hyper-Detailed Image Captioning: A Multiagent Approach and Dual Evaluation Metrics for Factuality and Coverage,"Saehyung Lee, Seunghyun Yoon, Trung Bui, Jing Shi, Sungroh Yoon",ICML 2025,https://icml.cc/,0,pdf,https://arxiv.org/abs/2412.15484,code,https://github.com/adobe-research/CapMAS,data,https://huggingface.co/datasets/saehyungl/CapMAS/,0,0
-2025,conference,NoLiMa: Long-Context Evaluation Beyond Literal Matching,"Ali Modarressi, Hanieh Deilamsalehy, Franck Dernoncourt, Trung Bui, Ryan A. Rossi, Seunghyun Yoon, Hinrich Schuetze",ICML 2025,https://icml.cc/,0,pdf,https://arxiv.org/abs/2502.05167,code,https://github.com/adobe-research/NoLiMa,0,0,0,0
+2025,conference,FaithUn: Toward Faithful Forgetting in Language Models by Investigating the Interconnectedness of Knowledge,"Nakyeong Yang, Minsung Kim, Seunghyun Yoon, Joongbo Shin, Kyomin Jung",EMNLP 2025,https://2025.emnlp.org/,0,pdf,https://arxiv.org/pdf/2502.19207,0,0,0,0,0,0
+2025,conference,DynaSaur: Large Language Agents Beyond Predefined Actions,"Dang Nguyen, Viet Dac Lai, Seunghyun Yoon, Ryan A. Rossi, Handong Zhao, Ruiyi Zhang, Puneet Mathur, Nedim Lipka, Yu Wang, Trung Bui, Franck Dernoncourt, Tianyi Zhou",COLM 2025,https://colmweb.org/,0,pdf,https://arxiv.org/pdf/2411.01747,0,0,0,0,0,0
+2025,conference,"A Survey on Long-Video Storytelling Generation: Architectures, Consistency, and Cinematic Quality","Mohamed Elmoghany, Ryan Rossi, Seunghyun Yoon, Subhojyoti Mukherjee, Eslam Bakr, Puneet Mathur, Gang Wu, Viet Dac Lai, Nedim Lipka, Ruiyi Zhang, Varun Manjunatha, Chien Nguyen, Daksh Dangi, Abel Salinas, Mohammad Taesiri, Hongjie Chen, Xiaolei Huang, Joe Barrow, Nesreen Ahmed, Hoda Eldardiry, Namyong Park, Yu Wang, Jaemin Cho, Anh Totti Nguyen, Zhengzhong Tu, Thien Nguyen, Dinesh Manocha, Mohamed Elhoseiny, Franck Dernoncourt",ICCV 2025 Workshop LongVid-Foundations,https://iccv.thecvf.com/,0,pdf,https://arxiv.org/pdf/2507.07202,0,0,0,0,0,0
+2025,conference,HerO 2 for Efficient Fact Verification,"Yejun Yoon, Jaeyoon Jung, Seunghyun Yoon, Kunwoo Park",ACL 2025 Workshop FEVER,https://2025.aclweb.org/,0,pdf,https://aclanthology.org/2025.fever-1.16.pdf,0,0,0,0,0,0
+2025,conference,SlimLM: An Efficient Small Language Model for On-Device Document Assistance,"Thang_M._Pham, Phat T. Nguyen, Seunghyun Yoon, Viet Dac Lai, Franck Dernoncourt, Trung Bui ",ACL 2025 System Demonstrations,https://2025.aclweb.org/,0,pdf,https://aclanthology.org/2025.acl-demo.42/,0,0,0,0,0,0
+2025,conference,From Selection to Generation: A Survey of LLM-based Active Learning,"Yu Xia, Subhojyoti Mukherjee, Zhouhang Xie, Junda Wu, Xintong Li, Ryan Aponte, Hanjia Lyu, Joe Barrow, Hongjie Chen, Franck Dernoncourt, Branislav Kveton, Tong Yu, Ruiyi Zhang, Jiuxiang Gu, Nesreen K. Ahmed, Yu Wang, Xiang Chen, Hanieh Deilamsalehy, Sungchul Kim, Zhengmian Hu, Yue Zhao, Nedim Lipka, Seunghyun Yoon, Ting-Hao Kenneth Huang, Zichao Wang, Puneet Mathur, Soumyabrata Pal, Koyel Mukherjee, Zhehao Zhang, Namyong Park, Thien Huu Nguyen, Jiebo Luo, Ryan A. Rossi, Julian McAuley",ACL 2025,https://2025.aclweb.org/,0,pdf,https://aclanthology.org/2025.acl-long.708/,0,0,0,0,0,0
+2025,conference,Hypothetical Documents or Knowledge Leakage? Rethinking LLM-based Query Expansion,"Yejun Yoon, Jaeyoon Jung, Seunghyun Yoon, Kunwoo Park",ACL 2025 Findings,https://2025.aclweb.org/,0,pdf,https://aclanthology.org/2025.findings-acl.980.pdf,0,0,0,0,0,0
+2025,conference,GUI Agents: A Survey,"Dang Nguyen, Jian Chen, Yu Wang, Gang Wu, Namyong Park, Zhengmian Hu, Hanjia Lyu, Junda Wu, Ryan Aponte, Yu Xia, Xintong Li, Jing Shi, Hongjie Chen, Viet Dac Lai, Zhouhang Xie, Sungchul Kim, Ruiyi Zhang, Tong Yu, Mehrab Tanjim, Nesreen K. Ahmed, Puneet Mathur, Seunghyun Yoon, Lina Yao, Branislav Kveton, Jihyung Kil, Thien Huu Nguyen, Trung Bui, Tianyi Zhou, Ryan A. Rossi, Franck Dernoncourt",ACL 2025 Findings,https://2025.aclweb.org/,0,pdf,https://aclanthology.org/2025.findings-acl.1158/,0,0,0,0,0,0
+2025,conference,Toward Robust Hyper-Detailed Image Captioning: A Multiagent Approach and Dual Evaluation Metrics for Factuality and Coverage,"Saehyung Lee, Seunghyun Yoon, Trung Bui, Jing Shi, Sungroh Yoon",ICML 2025,https://icml.cc/,0,pdf,https://openreview.net/pdf?id=REnIf3dCsI,code,https://github.com/adobe-research/CapMAS,data,https://huggingface.co/datasets/saehyungl/CapMAS/,0,0
+2025,conference,NoLiMa: Long-Context Evaluation Beyond Literal Matching,"Ali Modarressi, Hanieh Deilamsalehy, Franck Dernoncourt, Trung Bui, Ryan A. Rossi, Seunghyun Yoon, Hinrich Schuetze",ICML 2025,https://icml.cc/,0,pdf,https://openreview.net/pdf?id=0OshX1hiSa,code,https://github.com/adobe-research/NoLiMa,0,0,0,0
 2025,conference,Generating Diverse Hypotheses for Inductive Reasoning,"Kang-il Lee, Hyukhun Koh, Dongryeol Lee, Seunghyun Yoon, Minsung Kim, Kyomin Jung",NAACL 2025 ,https://2025.naacl.org/,oral presentation,pdf,https://aclanthology.org/2025.naacl-long.429.pdf,0,0,0,0,0,0
 2025,conference,"CORG: Generating Answers from Complex, Interrelated Contexts","Hyunji Lee, Franck Dernoncourt, Trung Bui, Seunghyun Yoon",NAACL 2025 ,https://2025.naacl.org/,0,pdf,https://aclanthology.org/2025.naacl-long.428.pdf,code,https://github.com/adobe-research/CORG,0,0,0,0
 2025,conference,VLind-Bench: Measuring Language Priors in Large Vision-Language Models,"Kang-il Lee, Minbeom Kim, Seunghyun Yoon, Minsung Kim, Dongryeol Lee, Hyukhun Koh, Kyomin Jung",NAACL 2025 Findings,https://2025.naacl.org/,0,pdf,https://aclanthology.org/2025.findings-naacl.231.pdf,code,https://github.com/klee972/VLind-Bench,data,https://huggingface.co/datasets/klee972/VLind-Bench,0,0
