@@ -4,6 +4,16 @@
 
 <ul style="line-height:1.4em">
   <font size="2">
+    <li>
+	<font color=red>*new*</font>
+	[08/2025]
+	Our paper (Unlearning) is accepted to <a href="https://2025.emnlp.org/">EMNLP 2025</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
+	[07/2025]
+	Our paper (Gui Agent) is accepted to <a href="https://colmweb.org/">COLM 2025</a>.
+  </li>  
   <li>
 	<font color=red>*new*</font>
 	[05/2025]
@@ -12,15 +22,14 @@
   <li>
 	<font color=red>*new*</font>
 	[05/2025]
-	<b>Three papers</b> (Active Learning, GUI Agent (findings), IR (findings)) are accepted to <a href="https://2025.aclweb.org/">ACL 2025</a>.
+	<b>Four papers</b> (Active Learning, GUI Agent (findings), IR (findings), SlimLM (system)) are accepted to <a href="https://2025.aclweb.org/">ACL 2025</a>.
   </li>
   <li>
 	<font color=red>*new*</font>
 	[05/2025]
 	<b>Two papers</b> (Image Captioning, LLM long context) are accepted to <a href="https://icml.cc/">ICML 2025</a>.
   </li>
-  <li>
-	<font color=red>*new*</font>
+  <li>	
 	[01/2025]
 	<b>Three papers</b> (QA, Inductive Reasoning, LVLM) are accepted to <a href="https://2025.naacl.org/">NAACL 2025</a>.
   </li>
